# book_shop_drf

./: .gitignore  Dockerfile  Makefile  README.md  TODO  example.py  pg_service.conf  pyproject.toml  req.txt
apps/: urls.py
apps/shared/: paginations.py  utilts.py
apps/shops/: admin.py  models.py  serializers.py  urls.py  views.py
apps/shops/migrations/: 0001_initial.py
apps/users/: admin.py  email_service.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/users/management/commands/: generate_data.py
apps/users/migrations/: 0001_initial.py
root/: __init__.py  celery.py  drf_settings.py  settings.py  urls.py
